<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingStart="20dp"
    android:paddingEnd="20dp"
    android:paddingTop="30dp"
    tools:context=".activities.CreateTaskActivity">

    <ImageView
        android:id="@+id/createtask_arrowback_button"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:contentDescription="@string/back_arrow_contentdesc"
        android:src="@drawable/ic_arrow_back"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.0"/>

    <TextView
        android:id="@+id/createtask_title_headline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_task_headline"
        android:fontFamily="@font/axiforma_black"
        android:lineHeight="50dp"
        android:textSize="25sp"
        android:layout_marginTop="20dp"
        android:textColor="@color/darkText"
        app:layout_constraintTop_toBottomOf="@id/createtask_arrowback_button"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.0"/>

    <EditText
        android:id="@+id/createtask_title_edittext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:hint="@string/create_task_title_hint"
        android:textSize="18sp"
        android:textColorHint="@color/hintText"
        android:textColor="@color/darkText"
        android:inputType="text"
        android:layout_marginTop="35dp"
        android:background="@drawable/edit_text_selector"
        android:fontFamily="@font/axiforma_regular"
        app:layout_constraintTop_toBottomOf="@id/createtask_title_headline"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/createtask_dueat_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:padding="10dp"
        android:background="@drawable/due_at_field_bg"
        app:layout_constraintTop_toBottomOf="@id/createtask_title_edittext"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">

        <ImageView
            android:id="@+id/createtask_dueat_icon"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/ic_calendar"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"/>

        <TextView
            android:id="@+id/createtask_dueat_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/create_task_dueat_date_default_text"
            android:fontFamily="@font/axiforma_regular"
            android:textColor="@android:color/black"
            android:textSize="15sp"
            android:layout_marginStart="30dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toRightOf="@id/createtask_dueat_icon"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/createtask_notification_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:padding="10dp"
        android:background="@drawable/notification_field_bg"
        app:layout_constraintTop_toBottomOf="@id/createtask_dueat_layout"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">

        <ImageView
            android:id="@+id/createtask_notification_icon"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/ic_notification"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"/>

        <TextView
            android:id="@+id/createtask_notification_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/create_task_reminder_default_text"
            android:fontFamily="@font/axiforma_regular"
            android:textColor="@android:color/black"
            android:textSize="15sp"
            android:layout_marginStart="30dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toRightOf="@id/createtask_notification_icon"/>

        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/ic_notification_arrow"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/createtask_subject_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:padding="10dp"
        android:background="@drawable/subject_field_bg"
        app:layout_constraintTop_toBottomOf="@id/createtask_notification_layout"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">

        <ImageView
            android:id="@+id/createtask_subject_icon"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/ic_subject"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"/>

        <TextView
            android:id="@+id/createtask_subject_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/create_task_subject_default_text"
            android:fontFamily="@font/axiforma_regular"
            android:textColor="@android:color/black"
            android:textSize="15sp"
            android:layout_marginStart="30dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toRightOf="@id/createtask_subject_icon"/>

        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/ic_subject_arrow"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <FrameLayout
        android:id="@+id/createtask_description_topline"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@id/createtask_subject_layout"
        android:background="@color/edit_text_line_normal"/>

    <EditText
        android:id="@+id/createtask_description_edittext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="12dp"
        android:background="@android:color/transparent"
        android:hint="@string/create_task_description_hint"
        android:fontFamily="@font/axiforma_regular"
        android:textSize="18sp"
        android:textColorHint="@color/hintText"
        android:textColor="@color/darkText"
        android:gravity="top"
        android:lines="3"
        android:maxLength="225"
        app:layout_constraintTop_toBottomOf="@id/createtask_description_topline"
        app:layout_constraintBottom_toTopOf="@id/createtask_description_bottomline"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

    <FrameLayout
        android:id="@+id/createtask_description_bottomline"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        app:layout_constraintTop_toBottomOf="@id/createtask_description_edittext"
        android:background="@color/edit_text_line_normal"/>

    <Button
        android:id="@+id/createtask_addtask_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/button_enabled"
        android:fontFamily="@font/axiforma_bold"
        android:textSize="18sp"
        android:text="@string/create_task_button"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>